--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <script src="client/js/gameObjects/asteroidRock.js"></script>
     </head>
 
-    <body >
+    <body > <! -- controls -->
         <center>
             <div>
                  Press
